# swe-take-home-1

backend/: .gitignore  README.md  pyproject.toml
backend/src/ecovision_climate_visualizer_backend/: main.py  seed.py
backend/src/ecovision_climate_visualizer_backend/dal/: helpers.py  models.py  queries.py
backend/src/ecovision_climate_visualizer_backend/server/: db.py  v1.py
data/: sample_data.json
frontend/: package-lock.json
frontend/src/: App.jsx  api.js
frontend/src/components/: Filters.jsx
