[project]
name = "ecovision-climate-visualizer-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sean Raven", email = "sravendragon0@hotmail.com"},
]
dependencies = [
    "fastapi>=0.116.1",
    "sqlalchemy>=2.0.41",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "All Rights Reserved"}


[tool.pdm]
distribution = false
